--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <groupId>zzy</groupId>
     <artifactId>httpclientLearn</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <logback.version>1.1.2</logback.version>
@@ -61,25 +62,39 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+                    <!-- ant插件 -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
                 <executions>
                     <execution>
-                        <id>package</id>
-                        <phase>package</phase>
+                        <id>install</id>
+                        <phase>install</phase>
                         <configuration>
-                            <target>
+                            <tasks>
                                 <ant antfile="${basedir}/build.xml">
                                     <target name="zip_all" />
+                                </ant>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>clean</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <tasks>
+                            </tasks>
+                            <target>
+                                <ant antfile="${basedir}/build.xml">
+                                    <target name="zip_clear" />
                                 </ant>
                             </target>
                         </configuration>
@@ -88,6 +103,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <!-- 打包时单元测试 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
